--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -275,7 +275,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.15
+background_opacity: 0.2
 
 #selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
@@ -499,6 +499,8 @@ background_opacity: 0.15
 # at once.
 key_bindings:
   # (Windows/Linux only)
+  #- { key: V,        mods: Control,        action: Paste            }
+  #- { key: C,        mods: Control,        action: Copy             }
   #- { key: Insert,   mods: Shift,         action: PasteSelection   }
   #- { key: Key0,     mods: Control,       action: ResetFontSize    }
   #- { key: Equals,   mods: Control,       action: IncreaseFontSize }
